implimented local images

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
+
 <div class="background">
   <div class="card">
-    <img src="https://i.imgur.com/xF6XWiO.png" alt="OtterFox Logo" class="logo" />
+    <img src="images/logo.png" alt="OtterFox Logo" class="logo" />
     <h1 class="brand">OTTERFOX <span>Solutions</span></h1>
     <h2 class="launch">Launching <br>Soon</h2>
     <p class="subtext">We are currently making some<br />improvements to our website!</p>
@@ -22,12 +22,12 @@
     <div class="socials">
       <a href="#"><i class="fab fa-facebook-f"></i></a>
       <a href="#"><i class="fab fa-instagram"></i></a>
-      <a href="#"><i class="fab fa-twitter"></i></a> <!-- 'x' is for Twitter rebrand -->
+      <a href="#"><i class="fab fa-twitter"></i></a> 
     </div>
 
   </div>
 </div>
-<!-- partial -->
+
   
 </body>
 </html>
