-added placeholders for social media links - changed subtext on landing page

--- a/index.html
+++ b/index.html
@@ -17,16 +17,66 @@
     <img src="images/logo.png" alt="OtterFox Logo" class="logo" />
     <h1 class="brand">OTTERFOX <span>Solutions</span></h1>
     <h2 class="launch">Launching <br>Soon</h2>
-    <p class="subtext">We are currently making some<br />improvements to our website!</p>
-    <button class="notify">NOTIFY ME</button>
+    <!-- <p class="subtext">We are currently making some<br />improvements to our website!</p> -->
+    <p class="tagline">Crafting bespoke web solutions for growing businesses.</p>
+    <!-- <button class="notify">NOTIFY ME</button> -->
+   <a href="#services" class="notify">OUR SERVICES</a>
+
+
     <div class="socials">
-      <a href="#"><i class="fab fa-facebook-f"></i></a>
-      <a href="#"><i class="fab fa-instagram"></i></a>
-      <a href="#"><i class="fab fa-twitter"></i></a> 
+      <a href="https://facebook.com"><i class="fab fa-facebook-f"></i></a>
+      <a href="https://instagram.com"><i class="fab fa-instagram"></i></a>
+      <a href="https://x.com"><i class="fab fa-twitter"></i></a> 
     </div>
 
   </div>
 </div>
+
+
+    <section id="services" class="section">
+        <h3>Our Services</h3>
+    <p class="subtext">Empowering your business with cutting-edge web solutions.</p>
+
+    <div class="flex-container">
+        <div class="flex-item">
+            <h4>Custom Web Design & Development</h4>
+            <p>We craft unique, user-friendly, and responsive websites tailored to your brand's vision and business goals. From concept to launch, we ensure a seamless digital experience.</p>
+        </div>
+
+        <div class="flex-item">
+            <h4>E-commerce Solutions</h4>
+            <p>Build powerful and secure online stores that drive sales. We specialize in creating intuitive shopping experiences and robust backend management for your products and services.</p>
+        </div>
+
+        <div class="flex-item">
+            <h4>Content Management Systems (CMS)</h4>
+            <p>Gain full control over your website content with easy-to-use CMS platforms like WordPress. We'll set up, customize, and train you to manage your site effortlessly.</p>
+        </div>
+
+        <div class="flex-item">
+            <h4>Website Maintenance & Support</h4>
+            <p>Ensure your website remains secure, up-to-date, and performs optimally. Our ongoing maintenance and dedicated support keep your online presence running smoothly.</p>
+        </div>
+
+        </div>
+        </section>
+
+    <section id="portfolio" class="section light-bg">
+        </section>
+
+    <section id="process" class="section">
+        </section>
+
+    <section id="blog-preview" class="section light-bg">
+        </section>
+
+    <section id="contact" class="section">
+        </section>
+
+    <footer>
+        </footer>
+
+
 
   
 </body>
