--- a/index.html
+++ b/index.html
@@ -1,83 +1,152 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>launching soon - gpt</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"><link rel="stylesheet" href="./style.css">
-
+    <meta charset="UTF-8">
+    <title>Otterfox Solutions - Launching Soon</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Montserrat:ital,wght@0,100..900;1,100..900&family=DM+Serif+Display&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
-<div class="background">
-  <div class="card">
-    <img src="images/logo.png" alt="OtterFox Logo" class="logo" />
-    <h1 class="brand">OTTERFOX <span>Solutions</span></h1>
-    <h2 class="launch">Launching <br>Soon</h2>
-    <!-- <p class="subtext">We are currently making some<br />improvements to our website!</p> -->
-    <p class="tagline">Crafting bespoke web solutions for growing businesses.</p>
-    <!-- <button class="notify">NOTIFY ME</button> -->
-   <a href="#services" class="notify">OUR SERVICES</a>
+    <!-- LANDING PAGE SECTION - Full viewport height -->
+    <div class="background">
+        <div class="card content-panel">
+            <img src="images/logo.png" alt="OtterFox Logo" class="logo" />
+            <h1 class="brand">OTTERFOX <span>Solutions</span></h1>
+            <h2 class="launch">Launching <br>Soon</h2>
+            <p class="tagline">Crafting bespoke web solutions for growing businesses.</p>
+            <a href="#services" class="notify">OUR SERVICES</a>
 
-
-    <div class="socials">
-      <a href="https://facebook.com"><i class="fab fa-facebook-f"></i></a>
-      <a href="https://instagram.com"><i class="fab fa-instagram"></i></a>
-      <a href="https://x.com"><i class="fab fa-twitter"></i></a> 
+            <div class="socials">
+                <a href="https://facebook.com/otterfoxsolutions"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://instagram.com/otterfoxsolutions"><i class="fab fa-instagram"></i></a>
+                <a href="https://x.com/otterfoxsolutions"><i class="fab fa-twitter"></i></a> 
+            </div>
+        </div>
     </div>
 
-  </div>
-</div>
-
-
+    <!-- OUR SERVICES SECTION -->
     <section id="services" class="section">
-        <h3>Our Services</h3>
-    <p class="subtext">Empowering your business with cutting-edge web solutions.</p>
-
-    <div class="flex-container">
-        <div class="flex-item">
-            <h4>Custom Web Design & Development</h4>
-            <p>We craft unique, user-friendly, and responsive websites tailored to your brand's vision and business goals. From concept to launch, we ensure a seamless digital experience.</p>
+        <div class="content-panel">
+            <h3>Our Services</h3>
+            <p class="subtext">Empowering your business with cutting-edge web solutions.</p>
+            <div class="flex-container">
+                <div class="flex-item">
+                    <h4>Custom Web Design & Development</h4>
+                    <p>We craft unique, user-friendly, and responsive websites tailored to your brand's vision and business goals. From concept to launch, we ensure a seamless digital experience.</p>
+                </div>
+                <div class="flex-item">
+                    <h4>E-commerce Solutions</h4>
+                    <p>Build powerful and secure online stores that drive sales. We specialize in creating intuitive shopping experiences and robust backend management for your products and services.</p>
+                </div>
+                <div class="flex-item">
+                    <h4>Content Management Systems (CMS)</h4>
+                    <p>Gain full control over your website content with easy-to-use CMS platforms like WordPress. We'll set up, customize, and train you to manage your site effortlessly.</p>
+                </div>
+                <div class="flex-item">
+                    <h4>Website Maintenance & Support</h4>
+                    <p>Ensure your website remains secure, up-to-date, and performs optimally. Our ongoing maintenance and dedicated support keep your online presence running smoothly.</p>
+                </div>
+            </div>
         </div>
+    </section>
 
-        <div class="flex-item">
-            <h4>E-commerce Solutions</h4>
-            <p>Build powerful and secure online stores that drive sales. We specialize in creating intuitive shopping experiences and robust backend management for your products and services.</p>
+    <!-- PORTFOLIO SECTION -->
+    <section id="portfolio" class="section">
+        <div class="content-panel">
+            <h3>Our Work</h3>
+            <p class="subtext">A glimpse into the diverse projects we can bring to life.</p>
+            <div class="flex-container">
+                <div class="flex-item">
+                    <img src="https://via.placeholder.com/400x250?text=Project+1+Mockup" alt="Fictional Project 1" style="max-width:100%; height:auto; border-radius:4px; margin-bottom:15px;">
+                    <h4>Local Cafe Website</h4>
+                    <p>A vibrant, mobile-first design to showcase a fictional local cafe's menu and atmosphere.</p>
+                    <a href="#" class="notify" style="padding:0.4rem 1rem; font-size:0.9rem;">View Project</a>
+                </div>
+                <div class="flex-item">
+                    <img src="https://via.placeholder.com/400x250?text=Project+2+Mockup" alt="Fictional Project 2" style="max-width:100%; height:auto; border-radius:4px; margin-bottom:15px;">
+                    <h4>Online Fitness Platform</h4>
+                    <p>Developed a robust membership portal with class schedules and booking features.</p>
+                    <a href="#" class="notify" style="padding:0.4rem 1rem; font-size:0.9rem;">View Project</a>
+                </div>
+                <div class="flex-item">
+                    <img src="https://via.placeholder.com/400x250?text=Project+3+Mockup" alt="Fictional Project 3" style="max-width:100%; height:auto; border-radius:4px; margin-bottom:15px;">
+                    <h4>E-commerce Redesign</h4>
+                    <p>Modernizing an existing online store for improved user experience and conversion rates.</p>
+                    <a href="#" class="notify" style="padding:0.4rem 1rem; font-size:0.9rem;">View Project</a>
+                </div>
+            </div>
         </div>
+    </section>
 
-        <div class="flex-item">
-            <h4>Content Management Systems (CMS)</h4>
-            <p>Gain full control over your website content with easy-to-use CMS platforms like WordPress. We'll set up, customize, and train you to manage your site effortlessly.</p>
-        </div>
-
-        <div class="flex-item">
-            <h4>Website Maintenance & Support</h4>
-            <p>Ensure your website remains secure, up-to-date, and performs optimally. Our ongoing maintenance and dedicated support keep your online presence running smoothly.</p>
-        </div>
-
-        </div>
-        </section>
-
-    <section id="portfolio" class="section light-bg">
-        </section>
-
+    <!-- OUR PROCESS SECTION -->
     <section id="process" class="section">
-        </section>
+        <div class="content-panel">
+            <h3>Our Process</h3>
+            <p class="subtext">How we bring your digital vision to reality.</p>
+            <div class="flex-container">
+                <div class="flex-item">
+                    <h4>1. Discovery & Strategy</h4>
+                    <p>Understanding your goals, audience, and market to define the project scope.</p>
+                </div>
+                <div class="flex-item">
+                    <h4>2. Design & Prototyping</h4>
+                    <p>Crafting intuitive user interfaces and experiences, refined through feedback.</p>
+                </div>
+                <div class="flex-item">
+                    <h4>3. Development & Testing</h4>
+                    <p>Building with clean code, ensuring functionality, performance, and cross-browser compatibility.</p>
+                </div>
+                <div class="flex-item">
+                    <h4>4. Launch & Support</h4>
+                    <p>Deploying your site and providing ongoing maintenance and optimization.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
-    <section id="blog-preview" class="section light-bg">
-        </section>
+    <!-- BLOG PREVIEW SECTION -->
+    <section id="blog-preview" class="section">
+        <div class="content-panel">
+            <h3>Latest from Our Blog</h3>
+            <p class="subtext">Insights, tips, and trends from the world of web development.</p>
+            <div class="flex-container">
+                <div class="flex-item">
+                    <img src="https://via.placeholder.com/400x200?text=Blog+Post+1" alt="Blog Post Image" style="max-width:100%; height:auto; border-radius:4px; margin-bottom:15px;">
+                    <h4>The Power of a Responsive Website</h4>
+                    <p>Learn why mobile-friendly design is no longer optional.</p>
+                    <a href="#" class="notify" style="padding:0.4rem 1rem; font-size:0.9rem;">Read More</a>
+                </div>
+                <div class="flex-item">
+                    <img src="https://via.placeholder.com/400x200?text=Blog+Post+2" alt="Blog Post Image" style="max-width:100%; height:auto; border-radius:4px; margin-bottom:15px;">
+                    <h4>SEO Basics for Small Businesses</h4>
+                    <p>Simple steps to improve your website's visibility online.</p>
+                    <a href="#" class="notify" style="padding:0.4rem 1rem; font-size:0.9rem;">Read More</a>
+                </div>
+            </div>
+            <a href="#" class="notify" style="margin-top:40px;">View All Articles</a>
+        </div>
+    </section>
 
+    <!-- CONTACT US SECTION -->
     <section id="contact" class="section">
-        </section>
+        <div class="content-panel">
+            <h3>Get in Touch</h3>
+            <p class="subtext">Ready to start your next web project? Let's talk!</p>
+            <p>Email: <a href="mailto:hello@otterfoxsolutions.com">hello@otterfoxsolutions.com</a></p>
+            <p>Phone: <a href="tel:+15195551234">+1 (519) 555-1234</a></p>
+        </div>
+    </section>
 
+    <!-- FOOTER -->
     <footer>
-        </footer>
+        <div class="content-panel">
+            <p>&copy; 2025 Otterfox Solutions. All rights reserved.</p>
+        </div>
+    </footer>
 
-
-
-  
 </body>
 </html>
