-added contact button - fixed spacing

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <h2 class="launch">Launching <br>Soon</h2>
             <p class="tagline">Crafting bespoke web solutions for growing businesses.</p>
             <a href="#services" class="notify">OUR SERVICES</a>
+            <a href="#contact" class="notify">CONTACT US</a>
 
             <div class="socials">
                 <a href="https://facebook.com/otterfoxsolutions"><i class="fab fa-facebook-f"></i></a>
