-added snap effect - applied styles to each section

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Otterfox Solutions - Launching Soon</title>
+    <title>Otterfox Solutions - Under Construction</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,14 +11,17 @@
 </head>
 <body>
 
-    <!-- LANDING PAGE SECTION - Full viewport height -->
+    <!-- LANDING PAGE SECTION - Full viewport height and centered content -->
     <div class="background">
-        <div class="card content-panel">
+        <div class="card content-panel"> <!-- .card for landing page specific layout, .content-panel for styling -->
             <img src="images/logo.png" alt="OtterFox Logo" class="logo" />
             <h1 class="brand">OTTERFOX <span>Solutions</span></h1>
-            <h2 class="launch">Launching <br>Soon</h2>
+            <h2 class="launch">Under <br>Construction</h2>
             <p class="tagline">Crafting bespoke web solutions for growing businesses.</p>
             <a href="#services" class="notify">OUR SERVICES</a>
+            <a href="#portfolio" class="notify">OUR WORK</a>
+            <a href="#process" class="notify">OUR PROCESS</a>
+            <a href="#blog-preview" class="notify">OUR BLOG</a>
             <a href="#contact" class="notify">CONTACT US</a>
 
             <div class="socials">
@@ -29,9 +32,9 @@
         </div>
     </div>
 
-    <!-- OUR SERVICES SECTION -->
-    <section id="services" class="section">
-        <div class="content-panel">
+    <!-- OUR SERVICES SECTION - Standard section for scrolling content -->
+    <section id="services" class="section"> <!-- Only .section class here -->
+        <div class="content-panel"> <!-- content-panel for the translucent background and padding -->
             <h3>Our Services</h3>
             <p class="subtext">Empowering your business with cutting-edge web solutions.</p>
             <div class="flex-container">
@@ -55,9 +58,9 @@
         </div>
     </section>
 
-    <!-- PORTFOLIO SECTION -->
-    <section id="portfolio" class="section">
-        <div class="content-panel">
+    <!-- PORTFOLIO SECTION - Standard section for scrolling content -->
+    <section id="portfolio" class="section"> <!-- Only .section class here -->
+        <div class="content-panel"> <!-- content-panel for the translucent background and padding -->
             <h3>Our Work</h3>
             <p class="subtext">A glimpse into the diverse projects we can bring to life.</p>
             <div class="flex-container">
@@ -83,9 +86,9 @@
         </div>
     </section>
 
-    <!-- OUR PROCESS SECTION -->
-    <section id="process" class="section">
-        <div class="content-panel">
+    <!-- OUR PROCESS SECTION - Standard section for scrolling content -->
+    <section id="process" class="section"> <!-- Only .section class here -->
+        <div class="content-panel"> <!-- content-panel for the translucent background and padding -->
             <h3>Our Process</h3>
             <p class="subtext">How we bring your digital vision to reality.</p>
             <div class="flex-container">
@@ -109,9 +112,9 @@
         </div>
     </section>
 
-    <!-- BLOG PREVIEW SECTION -->
-    <section id="blog-preview" class="section">
-        <div class="content-panel">
+    <!-- BLOG PREVIEW SECTION - Standard section for scrolling content -->
+    <section id="blog-preview" class="section"> <!-- Only .section class here -->
+        <div class="content-panel"> <!-- content-panel for the translucent background and padding -->
             <h3>Latest from Our Blog</h3>
             <p class="subtext">Insights, tips, and trends from the world of web development.</p>
             <div class="flex-container">
@@ -132,9 +135,9 @@
         </div>
     </section>
 
-    <!-- CONTACT US SECTION -->
-    <section id="contact" class="section">
-        <div class="content-panel">
+    <!-- CONTACT US SECTION - Standard section for scrolling content -->
+    <section id="contact" class="section"> <!-- Only .section class here -->
+        <div class="content-panel"> <!-- content-panel for the translucent background and padding -->
             <h3>Get in Touch</h3>
             <p class="subtext">Ready to start your next web project? Let's talk!</p>
             <p>Email: <a href="mailto:hello@otterfoxsolutions.com">hello@otterfoxsolutions.com</a></p>
@@ -142,9 +145,9 @@
         </div>
     </section>
 
-    <!-- FOOTER -->
-    <footer>
-        <div class="content-panel">
+    <!-- FOOTER - Standard section for scrolling content -->
+    <footer> <!-- Only footer tag here -->
+        <div class="content-panel"> <!-- content-panel for the translucent background and padding -->
             <p>&copy; 2025 Otterfox Solutions. All rights reserved.</p>
         </div>
     </footer>
