-removed broken imgs -removed broken social media links

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <a href="#contact" class="notify">CONTACT US</a>
 
             <div class="socials">
-                <a href="https://facebook.com/otterfoxsolutions"><i class="fab fa-facebook-f"></i></a>
-                <a href="https://instagram.com/otterfoxsolutions"><i class="fab fa-instagram"></i></a>
-                <a href="https://x.com/otterfoxsolutions"><i class="fab fa-twitter"></i></a> 
+                <a href="https://facebook.com/"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://instagram.com/"><i class="fab fa-instagram"></i></a>
+                <a href="https://x.com/"><i class="fab fa-twitter"></i></a> 
             </div>
         </div>
     </div>
@@ -65,19 +65,19 @@
             <p class="subtext">A glimpse into the diverse projects we can bring to life.</p>
             <div class="flex-container">
                 <div class="flex-item">
-                    <img src="https://via.placeholder.com/400x250?text=Project+1+Mockup" alt="Fictional Project 1" style="max-width:100%; height:auto; border-radius:4px; margin-bottom:15px;">
+                    <img src="#" alt="Fictional Project 1" style="max-width:100%; height:auto; border-radius:4px; margin-bottom:15px;">
                     <h4>Local Cafe Website</h4>
                     <p>A vibrant, mobile-first design to showcase a fictional local cafe's menu and atmosphere.</p>
                     <a href="#" class="notify" style="padding:0.4rem 1rem; font-size:0.9rem;">View Project</a>
                 </div>
                 <div class="flex-item">
-                    <img src="https://via.placeholder.com/400x250?text=Project+2+Mockup" alt="Fictional Project 2" style="max-width:100%; height:auto; border-radius:4px; margin-bottom:15px;">
+                    <img src="#" alt="Fictional Project 2" style="max-width:100%; height:auto; border-radius:4px; margin-bottom:15px;">
                     <h4>Online Fitness Platform</h4>
                     <p>Developed a robust membership portal with class schedules and booking features.</p>
                     <a href="#" class="notify" style="padding:0.4rem 1rem; font-size:0.9rem;">View Project</a>
                 </div>
                 <div class="flex-item">
-                    <img src="https://via.placeholder.com/400x250?text=Project+3+Mockup" alt="Fictional Project 3" style="max-width:100%; height:auto; border-radius:4px; margin-bottom:15px;">
+                    <img src="#" alt="Fictional Project 3" style="max-width:100%; height:auto; border-radius:4px; margin-bottom:15px;">
                     <h4>E-commerce Redesign</h4>
                     <p>Modernizing an existing online store for improved user experience and conversion rates.</p>
                     <a href="#" class="notify" style="padding:0.4rem 1rem; font-size:0.9rem;">View Project</a>
@@ -119,13 +119,13 @@
             <p class="subtext">Insights, tips, and trends from the world of web development.</p>
             <div class="flex-container">
                 <div class="flex-item">
-                    <img src="https://via.placeholder.com/400x200?text=Blog+Post+1" alt="Blog Post Image" style="max-width:100%; height:auto; border-radius:4px; margin-bottom:15px;">
+                    <img src="#" alt="Blog Post Image" style="max-width:100%; height:auto; border-radius:4px; margin-bottom:15px;">
                     <h4>The Power of a Responsive Website</h4>
                     <p>Learn why mobile-friendly design is no longer optional.</p>
                     <a href="#" class="notify" style="padding:0.4rem 1rem; font-size:0.9rem;">Read More</a>
                 </div>
                 <div class="flex-item">
-                    <img src="https://via.placeholder.com/400x200?text=Blog+Post+2" alt="Blog Post Image" style="max-width:100%; height:auto; border-radius:4px; margin-bottom:15px;">
+                    <img src="#" alt="Blog Post Image" style="max-width:100%; height:auto; border-radius:4px; margin-bottom:15px;">
                     <h4>SEO Basics for Small Businesses</h4>
                     <p>Simple steps to improve your website's visibility online.</p>
                     <a href="#" class="notify" style="padding:0.4rem 1rem; font-size:0.9rem;">Read More</a>
