commented out imgs so no broken link -added la choix link in "our work"

--- a/index.html
+++ b/index.html
@@ -65,22 +65,28 @@
             <p class="subtext">A glimpse into the diverse projects we can bring to life.</p>
             <div class="flex-container">
                 <div class="flex-item">
-                    <img src="#" alt="Fictional Project 1" style="max-width:100%; height:auto; border-radius:4px; margin-bottom:15px;">
+                    <!-- <img src="#" alt="Fictional Project 1" style="max-width:100%; height:auto; border-radius:4px; margin-bottom:15px;"> -->
                     <h4>Local Cafe Website</h4>
                     <p>A vibrant, mobile-first design to showcase a fictional local cafe's menu and atmosphere.</p>
                     <a href="#" class="notify" style="padding:0.4rem 1rem; font-size:0.9rem;">View Project</a>
                 </div>
                 <div class="flex-item">
-                    <img src="#" alt="Fictional Project 2" style="max-width:100%; height:auto; border-radius:4px; margin-bottom:15px;">
+                    <!-- <img src="#" alt="Fictional Project 2" style="max-width:100%; height:auto; border-radius:4px; margin-bottom:15px;"> -->
                     <h4>Online Fitness Platform</h4>
                     <p>Developed a robust membership portal with class schedules and booking features.</p>
                     <a href="#" class="notify" style="padding:0.4rem 1rem; font-size:0.9rem;">View Project</a>
                 </div>
                 <div class="flex-item">
-                    <img src="#" alt="Fictional Project 3" style="max-width:100%; height:auto; border-radius:4px; margin-bottom:15px;">
+                    <!-- <img src="#" alt="Fictional Project 3" style="max-width:100%; height:auto; border-radius:4px; margin-bottom:15px;"> -->
                     <h4>E-commerce Redesign</h4>
                     <p>Modernizing an existing online store for improved user experience and conversion rates.</p>
                     <a href="#" class="notify" style="padding:0.4rem 1rem; font-size:0.9rem;">View Project</a>
+                </div>
+                <div class="flex-item">
+                    <!-- <img src="#" alt="Fictional Project 1" style="max-width:100%; height:auto; border-radius:4px; margin-bottom:15px;"> -->
+                    <h4>Le Choix</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam nisi eum recusandae consectetur, ullam magni?</p>
+                    <a href="https://www.figma.com/proto/1Sy5sSmQGjh77l3dqHXOP2/Food---Website-Design--Community-?t=OkaWpnmrF8jZtSEG-1&node-id=202-2279" class="notify" style="padding:0.4rem 1rem; font-size:0.9rem;">View Project</a>
                 </div>
             </div>
         </div>
@@ -119,13 +125,13 @@
             <p class="subtext">Insights, tips, and trends from the world of web development.</p>
             <div class="flex-container">
                 <div class="flex-item">
-                    <img src="#" alt="Blog Post Image" style="max-width:100%; height:auto; border-radius:4px; margin-bottom:15px;">
+                    <!-- <img src="#" alt="Blog Post Image" style="max-width:100%; height:auto; border-radius:4px; margin-bottom:15px;"> -->
                     <h4>The Power of a Responsive Website</h4>
                     <p>Learn why mobile-friendly design is no longer optional.</p>
                     <a href="#" class="notify" style="padding:0.4rem 1rem; font-size:0.9rem;">Read More</a>
                 </div>
                 <div class="flex-item">
-                    <img src="#" alt="Blog Post Image" style="max-width:100%; height:auto; border-radius:4px; margin-bottom:15px;">
+                    <!-- <img src="#" alt="Blog Post Image" style="max-width:100%; height:auto; border-radius:4px; margin-bottom:15px;"> -->
                     <h4>SEO Basics for Small Businesses</h4>
                     <p>Simple steps to improve your website's visibility online.</p>
                     <a href="#" class="notify" style="padding:0.4rem 1rem; font-size:0.9rem;">Read More</a>
